# acinf

./: LICENSE.txt  README.rst  pyproject.toml  requirements.txt
acinf/: __main__.py
